--- a/src/pages/Wishlist/wishlist.css
+++ b/src/pages/Wishlist/wishlist.css
@@ -8,7 +8,7 @@
 }
 .card-categories .list-structure {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(32rem, 1fr));
 }
 .card-container {
   width: var(--size-320);
