[feat]- checkout page

--- a/src/styles/doc.css
+++ b/src/styles/doc.css
@@ -28,3 +28,9 @@
   display: flex;
   align-items: center;
 }
+.address-book {
+  border: var(--size-16);
+  box-shadow: 0 2px 1px -1px rgb(0 0 0 / 20%), 0 1px 1px 0 rgb(0 0 0 / 14%),
+    0 1px 3px 0 rgb(0 0 0 / 12%);
+  padding: 1rem;
+}
