--- a/src/styles/doc.css
+++ b/src/styles/doc.css
@@ -34,3 +34,9 @@
     0 1px 3px 0 rgb(0 0 0 / 12%);
   padding: 1rem;
 }
+.ht-182 {
+  height: 182px;
+}
+.pdt-category-bar {
+  padding: var(--size-16) var(--size-32);
+}
