[styles]- added accent color

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -4,6 +4,8 @@
   --background-color: #f4f4f4;
   --complementry-color: #525252;
   --dark-color: #262626;
+  --accent-color: #fb641b;
+  --accent-light-color: #ff9f00;
 
   --primary-text: #000000;
   --sec-text: #2f2e41;
