--- a/src/styles/utility.css
+++ b/src/styles/utility.css
@@ -13,6 +13,14 @@
   border: 1px solid var(--primary-color);
   border-radius: var(--size-32);
 }
+.btn-accent {
+  background-color: var(--accent-color);
+  color: var(--white);
+}
+.btn-accent-light {
+  background-color: var(--accent-light-color);
+  color: var(--white);
+}
 /*lists*/
 .list-non-bullet {
   list-style: none;
@@ -69,6 +77,9 @@
 .text-center {
   text-align: center;
 }
+.item-center {
+  align-items: center;
+}
 /*container*/
 .auto-container {
   padding: var(--size-32);
@@ -89,4 +100,8 @@
 /*width*/
 .wd-full {
   width: 100%;
+}
+/*typography*/
+.txt-color {
+  color: var(--black);
 }
