[styles] - nav responsiveness

--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -131,9 +131,12 @@
   display: block;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .menu-icon {
     display: block;
+  }
+  #main-menu {
+    display: none;
   }
 }
 
