--- a/src/components/AddressBook/addressBook.css
+++ b/src/components/AddressBook/addressBook.css
@@ -4,3 +4,9 @@
 .address-book .address-structure {
   align-items: flex-start;
 }
+
+@media (max-width: 767px) {
+  .address-book {
+    width: 100%;
+  }
+}
