--- a/src/styles/doc.css
+++ b/src/styles/doc.css
@@ -44,6 +44,9 @@
   display: grid;
   grid-template-columns: 60% 1fr 10%;
 }
+.ht-90vh {
+  height: 90vh;
+}
 @media (max-width: 1100px) {
   .wrapper.wrapper-cart {
     grid-template-columns: 1fr;
