--- a/src/pages/ProductListing/product-listing.css
+++ b/src/pages/ProductListing/product-listing.css
@@ -1,4 +1,11 @@
+/*root*/
+#root {
+  overflow-x: hidden;
+}
 /*filter aside*/
+.mobile-filter {
+  display: none;
+}
 .filter-container {
   flex-basis: var(--size-320);
 }
@@ -10,6 +17,7 @@
 .filter-price-input {
   width: 100%;
 }
+
 /*product cards*/
 .card-categories {
   max-width: 140rem;
@@ -43,11 +51,42 @@
   background-color: var(--primary-light-color);
 }
 
-@media (max-width: 768px) {
+.mobile-element {
+  display: none;
+}
+
+@media (max-width: 767px) {
   .filter-container {
     display: none;
   }
-  .card-categories.auto-container {
-    padding: var(--size-16);
+  .mobile-filter {
+    display: block;
+    position: fixed;
+    bottom: 0;
+    z-index: 1;
+    background-color: var(--txt-clr-secondary);
+    display: flex;
+  }
+  .btn.mobile-filter-btn {
+    background-color: var(--primary-color);
+    color: var(--txt-clr-secondary);
+    font-size: var(--size-md);
+    margin: 1.6rem auto;
+  }
+  .filter-mobile-screen {
+    display: block;
+    position: fixed;
+    background-color: #fff;
+    z-index: 9;
+    width: 100%;
+    top: 0;
+    overflow: hidden;
+    height: 100vh;
+  }
+  .desktop-element {
+    display: none;
+  }
+  .mobile-element {
+    display: block;
   }
 }
