--- a/src/pages/Wishlist/wishlist.css
+++ b/src/pages/Wishlist/wishlist.css
@@ -33,6 +33,7 @@
   position: absolute;
   top: var(--size-8);
   right: var(--size-8);
+  cursor: pointer;
 }
 .wishlist-icon.fill {
   color: var(--danger);
