--- a/src/styles/doc.css
+++ b/src/styles/doc.css
@@ -47,6 +47,9 @@
 .ht-90vh {
   height: 90vh;
 }
+.list-non-bullet .card-container:hover {
+  cursor: default;
+}
 @media (max-width: 1100px) {
   .wrapper.wrapper-cart {
     grid-template-columns: 1fr;
