[styles] - mobile card responsiveness

--- a/src/pages/Wishlist/wishlist.css
+++ b/src/pages/Wishlist/wishlist.css
@@ -38,3 +38,11 @@
 .wishlist-icon.fill {
   color: var(--danger);
 }
+@media (max-width: 425px) {
+  .card-categories .list-structure {
+    grid-template-columns: repeat(auto-fit, minmax(24rem, 1fr));
+  }
+  .card-container {
+    width: var(--size-240);
+  }
+}
